--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charget="UTF-8">
     <meta name="viewport" content="width=device-width, initial-cale=1.0">
     <title>AluraBooks</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>AluraBooks</h1>
+    <header class="cabeçalho">
+        <span clas="cabeçalho_menu-hamburguer"></span>
+        <img src="img/" alt="">
+    </header>
         
 </body>
 
